--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,5 @@
 --- 
+Jaci Harris resume.pdf: Jaci Harris resume-aacc2182e4aa247d5fc7525fb9f4da34.pdf
 jaci.jpg: jaci-af17c86278ae928ad42e8c04d6e6df8e.jpg
 jquery-ui.min.js: jquery-ui.min-2b432ef5545e6620f94e7638b7574058.js
 jquery.min.js: jquery.min-ac6382033c1c5e27ebbc5a5a0597ccb9.js
