new picture on contact

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,8 @@
 --- 
 Jaci Harris resume.pdf: Jaci Harris resume-aacc2182e4aa247d5fc7525fb9f4da34.pdf
 jaci.jpg: jaci-af17c86278ae928ad42e8c04d6e6df8e.jpg
+jaci_smiling.png: jaci_smiling-48ab03cfb1beb6cb532eb3074a388608.png
+jaci_standing.png: jaci_standing-6bb7d90944b58cb6d9b65cf3e08a36a3.png
 jquery-ui.min.js: jquery-ui.min-2b432ef5545e6620f94e7638b7574058.js
 jquery.min.js: jquery.min-ac6382033c1c5e27ebbc5a5a0597ccb9.js
 application.js: application-42694238ba14c42b0589a9b7eb5e262d.js
