new picture on landing page

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,9 +1,15 @@
 --- 
+IMG_1572.JPG: IMG_1572-8dc4e42e82f25cb50038747ab71aaee3.JPG
+IMG_1579.JPG: IMG_1579-175d155b1e17ac07202a090abf406263.JPG
+IMG_1586.JPG: IMG_1586-0f45cc763c14d26ecada4cfdf0476265.JPG
+IMG_1587.JPG: IMG_1587-9b14a52a2aa31ae6735639ca0435ec8d.JPG
+IMG_1593.JPG: IMG_1593-b63726fc56166372cb964a1bd62dc1d8.JPG
 Jaci Harris resume.pdf: Jaci Harris resume-aacc2182e4aa247d5fc7525fb9f4da34.pdf
 jaci.jpg: jaci-af17c86278ae928ad42e8c04d6e6df8e.jpg
 jaci_smiling.png: jaci_smiling-48ab03cfb1beb6cb532eb3074a388608.png
 jaci_standing.png: jaci_standing-6bb7d90944b58cb6d9b65cf3e08a36a3.png
+new.jpg: new-6e2222eb5cabc7fcfb0828e2806b6c2e.jpg
 jquery-ui.min.js: jquery-ui.min-2b432ef5545e6620f94e7638b7574058.js
 jquery.min.js: jquery.min-ac6382033c1c5e27ebbc5a5a0597ccb9.js
 application.js: application-42694238ba14c42b0589a9b7eb5e262d.js
-application.css: application-7a84d171e8c585ff79b87c31d2c0819c.css
+application.css: application-4db76ef96bbbfb9a43094674be626beb.css
