--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,6 +9,7 @@ jaci.jpg: jaci-af17c86278ae928ad42e8c04d6e6df8e.jpg
 jaci_smiling.png: jaci_smiling-48ab03cfb1beb6cb532eb3074a388608.png
 jaci_standing.png: jaci_standing-6bb7d90944b58cb6d9b65cf3e08a36a3.png
 new.jpg: new-6e2222eb5cabc7fcfb0828e2806b6c2e.jpg
+website.jpg: website-a319c18f7074358545459f5b9df2724f.jpg
 jquery-ui.min.js: jquery-ui.min-2b432ef5545e6620f94e7638b7574058.js
 jquery.min.js: jquery.min-ac6382033c1c5e27ebbc5a5a0597ccb9.js
 application.js: application-42694238ba14c42b0589a9b7eb5e262d.js
